Add API docs for center types
